--- a/EuroUber/index.html
+++ b/EuroUber/index.html
@@ -130,16 +130,16 @@
               </form>
               <div class="social">
                 <a href="#">
-                  <img src="/img/fb.png" class="soc-icon" alt="" width="50px">
+                  <img src="../img/fb.png" class="soc-icon" alt="" width="50px">
                 </a>
                 <a href="#">
-                  <img src="/img/tw.png" class="soc-icon" alt="" width="50px">
+                  <img src="../img/tw.png" class="soc-icon" alt="" width="50px">
                 </a>
                 <a href="#">s
-                  <img src="/img/vk.png" class="soc-icon" alt="" width="50px">
+                  <img src="../img/vk.png" class="soc-icon" alt="" width="50px">
                 </a>
                 <a href="#">
-                  <img src="/img/inst.png" class="soc-icon" alt="" width="50px">
+                  <img src="../img/inst.png" class="soc-icon" alt="" width="50px">
                 </a>
               </div>
             </div>
