--- a/EuroUber/index.html
+++ b/EuroUber/index.html
@@ -85,8 +85,8 @@
 
             <div class="col-lg-3 col-md-4 col-sm-8 col-xs-9">
               <div class="phone">
-                <img src="/img/tg.png" alt="" width="30px">
-                <img src="/img/viber.png" alt="" width="30px">
+                <img src="./img/tg.png" alt="" width="30px">
+                <img src="./img/viber.png" alt="" width="30px">
                 <span>(099) 343-91-58
                 </span>
               </div>
@@ -103,7 +103,7 @@
                 <h1>Акция от
                   <span>Euro</span>Uber</h1>
                 <p>Приятный бонус для новых водителей. Заключается он в следующем - совершите в течении недели не менее 100 поездок и получите 10 литров топлива для Вашего автомобиля!</p>
-                <img src="/img/gas.png" alt="10 литров EuroUber">
+                <img src="./img/gas.png" alt="10 литров EuroUber">
               </div>
             </div>
             <div class="col-lg-4 col-lg-offset-1 col-md-5 col-md-offset-1">
@@ -130,16 +130,16 @@
               </form>
               <div class="social">
                 <a href="#">
-                  <img src="../img/fb.png" class="soc-icon" alt="" width="50px">
+                  <img src="./img/fb.png" class="soc-icon" alt="" width="50px">
                 </a>
                 <a href="#">
-                  <img src="../img/tw.png" class="soc-icon" alt="" width="50px">
+                  <img src="./img/tw.png" class="soc-icon" alt="" width="50px">
                 </a>
                 <a href="#">s
-                  <img src="../img/vk.png" class="soc-icon" alt="" width="50px">
+                  <img src="./img/vk.png" class="soc-icon" alt="" width="50px">
                 </a>
                 <a href="#">
-                  <img src="../img/inst.png" class="soc-icon" alt="" width="50px">
+                  <img src="./img/inst.png" class="soc-icon" alt="" width="50px">
                 </a>
               </div>
             </div>
@@ -244,7 +244,7 @@
           <div class="row">
             <div class="feature-wrap">
               <div class="col-md-4 pull-right col-sm-5">
-                <img src="img/money.png" alt="">
+                <img src="./img/money.png" alt="">
               </div>
               <div class="col-md-6  pull-right col-sm-7">
                 <p>Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Букв повстречался, заглавных океана! Великий рукописи, напоивший жизни толку о! Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные
@@ -255,9 +255,9 @@
           <div class="row">
             <div class="feature-wrap">
               <div class="col-md-4 col-sm-5">
-                <img src="img/location.png" alt="">
+                <img src="./img/location.png" alt="">
               </div>
-              < d iv="iv" class="col-md-6 col-sm-7">
+              <div="iv" class="col-md-6 col-sm-7">
                 <p>Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Букв повстречался, заглавных океана! Великий рукописи, напоивший жизни толку о! Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные
                   тексты. Букв повстречался, заглавных океана! Великий рукописи, напоивший жизни толку о!</p>
               </div>
@@ -270,15 +270,15 @@
           <div class="row">
             <h4>Контакты</h4>
             <div class="contacts-left">
-              <img src="/img/tg.png" alt="" width="50px" style="margin-right: 10px; border: 2px solid  white; border-radius: 50%;">
-              <img src="/img/viber.png" alt="" width="50px" style="margin-right: 10px; border: 2px solid  white; border-radius: 50%;">
+              <img src="./img/tg.png" alt="" width="50px" style="margin-right: 10px; border: 2px solid  white; border-radius: 50%;">
+              <img src="./img/viber.png" alt="" width="50px" style="margin-right: 10px; border: 2px solid  white; border-radius: 50%;">
               <p>(099) 34-39-158
                 <br>(068) 11-87-996
                 <br>(073) 1-12345-1</p>
             </div>
           </div>
           <div class="col-md-5 col-md-offset-1 col-sm-4 col-sm-offset-2">
-            <img src="/img/mail.png" alt="" width="50px" style="margin-right: 10px; border: 2px solid  white; border-radius: 50%;">
+            <img src="./img/mail.png" alt="" width="50px" style="margin-right: 10px; border: 2px solid  white; border-radius: 50%;">
             <p>
               <a href="mailto:chhe@ukr.net">chhe@ukr.net</a>
             </p>
