--- a/EuroUber/index.html
+++ b/EuroUber/index.html
@@ -135,7 +135,7 @@
                 <a href="#">
                   <img src="./img/tw.png" class="soc-icon" alt="" width="50px">
                 </a>
-                <a href="#">s
+                <a href="#">
                   <img src="./img/vk.png" class="soc-icon" alt="" width="50px">
                 </a>
                 <a href="#">
@@ -160,7 +160,7 @@
                         <div class="col-md-10 col-md-offset-1">
                           <div class="img-wrap">
 
-                            <img src="http://lorempixel.com/200/200/animals" alt="First review">
+                            <img src="https://i1.androeed.ru/icons/2018/09/04/17053.png" alt="First review">
                           </div>
                           <h3>Алексей Потапов</h3>
                           <div class="slide-desc">
@@ -177,7 +177,7 @@
                       <div class="row">
                         <div class="col-md-10 col-md-offset-1">
                           <div class="img-wrap">
-                            <img src="http://lorempixel.com/200/200/food" alt="First review">
+                            <img src="https://i1.androeed.ru/icons/2018/09/04/17053.png" alt="First review">
                           </div>
                           <h3>Алексей Потапов</h3>
                           <div class="slide-desc">
@@ -194,7 +194,7 @@
                       <div class="row">
                         <div class="col-md-10 col-md-offset-1">
                           <div class="img-wrap">
-                            <img src="http://lorempixel.com/200/200/cats" alt="First review">
+                            <img src="https://i1.androeed.ru/icons/2018/09/04/17053.png" alt="First review">
                           </div>
                           <h3>Алексей Потапов</h3>
                           <div class="slide-desc">
@@ -233,7 +233,7 @@
             <h4>Преимущества EuroUber</h4>
             <div class="feature-wrap">
               <div class="col-md-4 col-sm-5">
-                <img src="/img/24.png" alt="">
+                <img src="./img/24.png" alt="">
               </div>
               <div class="col-md-6 col-sm-7">
                 <p>Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Букв повстречался, заглавных океана! Великий рукописи, напоивший жизни толку о! Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные
